// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabPanel> Snapshots and structure should render correctly 1`] = `
<div
  aria-labelledby="tab-1"
  className="lumx-tab-panel"
  id="tab-panel-1"
  role="tabpanel"
  tabIndex={0}
>
  Tab panel content
</div>
`;

exports[`<TabPanel> Snapshots and structure should render isActive state 1`] = `
<div
  aria-labelledby="tab-2"
  className="lumx-tab-panel lumx-tab-panel--is-active"
  id="tab-panel-2"
  role="tabpanel"
  tabIndex={0}
>
  Tab panel content
</div>
`;
